# Cybersecurity-Projects

./: .gitignore  PHASE10_VERIFICATION_REPORT.md  PHASES_10_18_VERIFICATION_REPORT.md  README.md  VERIFICATION_SUMMARY.md  phase10_verification_evidence.json  phases_10_18_verification_results.json  pyproject.toml  requirements-gui.txt  test_audit_log_phase10_2.py  test_observability_phase10_4.py  test_phase_6_validation.py  test_rbac_phase10_1.py  verify_phase10.py  verify_phases_10_18.py
config/: default.json
data/: soc_audit.db  soc_audit_server.db
docs/: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  MULTI_USER_READINESS.md  PHASE_11_REALTIME.md  PHASE_17_ENTERPRISE.md  RBAC_MATRIX.md  ROADMAP.md
rules/: cis-benchmark.yaml  mitre-mapping.yaml  nist-800-53.yaml
src/soc_audit/: __init__.py  cli.py
src/soc_audit/agent/: __init__.py  __main__.py  agent_main.py  client.py  normalize.py
src/soc_audit/core/: __init__.py  behavioral_baseline.py  cisa_crosswalk.py  collectors.py  compliance.py  config.py  engine.py  external_integrations.py  forensic_snapshot.py  incidents.py  interfaces.py  mitre.py  mitre_correlation.py  models.py  multi_tenant.py  rba.py  response_playbooks.py  risk.py  rules.py  security_dashboard.py  storage.py  suppression.py  threat_hunt.py  view_modes.py
src/soc_audit/gui/: __init__.py  __main__.py  cli_bridge.py  dashboard_view.py  findings_view.py  main_window.py  metrics.py  report_export.py  scanner_view.py  theme.py
src/soc_audit/modules/: __init__.py  compliance_mapper.py  firewall_analyzer.py  log_analyzer.py  (+5 more)
tools/: create_icon.py
(+43 files in other folders)
